Bug fix: app overflow-x hidden to prevent scroll when sidebar expanded. Builder preview adjustments for mobile.  Builder question viewer button colours adjust based on background.

--- a/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/special-page-builder/footer1/footer1.component.scss
+++ b/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/special-page-builder/footer1/footer1.component.scss
@@ -1,8 +1,10 @@
 @import 'src/shared/assets/scss/helpers';
 
 #welcome-footer {
-
-	padding: 10px;
+	white-space: nowrap;
+	@include media-breakpoint-up(md) {
+		padding: 10px;
+	}
 	margin-top: 0px;
 	z-index: 0;
 	width: 100%;
@@ -31,4 +33,14 @@
 .footer-preview {
 	position: fixed;
 	bottom: 0px;
+}
+
+.footer-logo {
+	margin-top: 10px;
+	height: 25px;
+	width: auto;
+	@include media-breakpoint-up(md) {
+		margin-top: 0px;
+		height: 40px;
+	}
 }
