--- a/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/special-page-builder/question-viewer/question-viewer.component.scss
+++ b/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/special-page-builder/question-viewer/question-viewer.component.scss
@@ -73,7 +73,7 @@
 		vertical-align: middle !important;
 		text-align: center !important;
 		font-weight: bold !important;
-		font-size: 20px;
+		font-size: 16px;
 		padding: 15px;
 		max-width: 60px;
 		max-height: 45px;
