--- a/src/TRAISI/ClientApp/src/shared/assets/scss/_base.scss
+++ b/src/TRAISI/ClientApp/src/shared/assets/scss/_base.scss
@@ -7,6 +7,7 @@ app, .app {
 	position: fixed;
 	width: 100vw;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .sidebar{
